--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn35.116:8.20": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. ",
   "sn35.116:8.21": "So wie er es erklärt, solltet ihr es behalten.“ ",
   "sn35.116:9.1": "„Ja, werter Freund“, antworteten jene Mönche und Nonnen. Sie erhoben sich von ihren Sitzen und gingen zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Unterredung mit Ānanda. Dann sagten sie: ",
-  "sn35.116:10.14": "„Und Ānanda erklärte uns klar die Bedeutung in dieser Weise, mit diesen Worten und Ausdrücken.“ "
+  "sn35.116:10.14": "„Und Ānanda erklärte uns klar die Bedeutung in dieser Weise, mit diesen Worten und Ausdrücken.“ ",
+  "sn35.116:11.1": "„Mönche und Nonnen, Ānanda ist klug, er besitzt große Weisheit. "
 }
