Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -993,6 +993,7 @@
   "sn-name:1099.sn35.114": "Māras Schlinge (1) ",
   "sn-name:1100.sn35.115": "Māras Schlinge (2) ",
   "sn-name:1101.sn35.116": "Ans Ende der Welt gehen ",
+  "sn-name:1102.sn35.117": "Sinnesreize ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
