--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
   "sn35.117:0.1": "Verbundene Lehrreden 35.117 ",
-  "sn35.117:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
+  "sn35.117:0.2": "12. Das Kapitel über die Welt und die Sinnesreize ",
   "sn35.117:0.3": "Sinnesreize "
 }
