--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -989,7 +989,7 @@
   "sn-name:1095.sn35.111": "Vollständiges Verstehen innen ",
   "sn-name:1096.sn35.112": "Vollständiges Verstehen außen ",
   "sn-name:1097.sn35.113": "Mithören ",
-  "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
+  "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Sinnesreize ",
   "sn-name:1099.sn35.114": "Māras Schlinge (1) ",
   "sn-name:1100.sn35.115": "Māras Schlinge (2) ",
   "sn-name:1101.sn35.116": "Ans Ende der Welt gehen ",
