--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.117:0.2": "12. Das Kapitel über die Welt und die Sinnesreize ",
   "sn35.117:0.3": "Sinnesreize ",
   "sn35.117:1.1": "„Mönche und Nonnen, vor meinem Erwachen, als ich noch nicht erwacht war, aber zum Erwachen entschlossen, dachte ich: ",
-  "sn35.117:1.2": "‚Mein Geist könnte oft zu den fünf Arten von Sinnesreizen abschweifen, die ich in der Vergangenheit erfuhr, die vergangen sind, aufgehört haben und zugrunde gegangen sind, oder zu den gegenwärtigen oder ein wenig zu den zukünftigen.‘ "
+  "sn35.117:1.2": "‚Mein Geist könnte oft zu den fünf Arten von Sinnesreizen abschweifen, die ich in der Vergangenheit erfuhr, die vergangen sind, aufgehört haben und zugrunde gegangen sind, oder zu den gegenwärtigen oder ein wenig zu den zukünftigen.‘ ",
+  "sn35.117:1.3": "Da kam mir der Gedanke: "
 }
