--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -5,5 +5,5 @@
   "sn35.117:1.1": "„Mönche und Nonnen, vor meinem Erwachen, als ich noch nicht erwacht war, aber zum Erwachen entschlossen, dachte ich: ",
   "sn35.117:1.2": "‚Mein Geist könnte oft zu den fünf Arten von Sinnesreizen abschweifen, die ich in der Vergangenheit erfahren habe, die vergangen sind, aufgehört haben und zugrunde gegangen sind, oder zu den gegenwärtigen oder ein wenig zu den zukünftigen.‘ ",
   "sn35.117:1.3": "Da kam mir der Gedanke: ",
-  "sn35.117:1.4": "‚Ich sollte auf meine eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten von Sinnesreizen hüten, die ich in der Vergangenheit erfuhr, die vergangen sind, aufgehört haben und zugrunde gegangen sind.‘ "
+  "sn35.117:1.4": "‚Ich sollte auf meine eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten von Sinnesreizen hüten, die ich in der Vergangenheit erfahren habe, die vergangen sind, aufgehört haben und zugrunde gegangen sind.‘ "
 }
