--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.117:1.6": "Daher solltet ihr auf eure eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten von Sinnesreizen hüten, die ihr in der Vergangenheit erfahren habt, die vergangen sind, aufgehört haben und zugrunde gegangen sind. ",
   "sn35.117:1.7": "Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. ",
   "sn35.117:1.8": "Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
-  "sn35.117:1.9": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.“ "
+  "sn35.117:1.9": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.“ ",
+  "sn35.117:1.10": "Nachdem er gesprochen hatte, erhob sich der Buddha von seinem Sitz und ging zu seiner Hütte. "
 }
