--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.117:1.7": "Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. ",
   "sn35.117:1.8": "Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
   "sn35.117:1.9": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.“ ",
-  "sn35.117:1.10": "Nachdem er gesprochen hatte, erhob sich der Buddha von seinem Sitz und ging zu seiner Hütte. "
+  "sn35.117:1.10": "Nachdem er gesprochen hatte, erhob sich der Buddha von seinem Sitz und ging zu seiner Hütte. ",
+  "sn35.117:2.1": "Kurz nachdem der Buddha gegangen war, überlegten diese Mönche und Nonnen: "
 }
