--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.117:1.9": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.“ ",
   "sn35.117:1.10": "Nachdem er gesprochen hatte, erhob sich der Buddha von seinem Sitz und ging zu seiner Hütte. ",
   "sn35.117:2.1": "Kurz nachdem der Buddha gegangen war, überlegten diese Mönche und Nonnen: ",
-  "sn35.117:2.2": "„Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: "
+  "sn35.117:2.2": "„Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
+  "sn35.117:2.3": "‚Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. "
 }
