--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.117:2.2": "„Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "sn35.117:2.3": "‚Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. ",
   "sn35.117:2.4": "Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
-  "sn35.117:2.5": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ "
+  "sn35.117:2.5": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ ",
+  "sn35.117:2.6": "Wer kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären?“ "
 }
