--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.117:2.5": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ ",
   "sn35.117:2.6": "Wer kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären?“ ",
   "sn35.117:3.1": "Da dachten diese Mönche und Nonnen: ",
-  "sn35.117:3.2": "„Dieser Ehrwürdige Ānanda wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. "
+  "sn35.117:3.2": "„Dieser Ehrwürdige Ānanda wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
+  "sn35.117:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. "
 }
