Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn35.117:3.1": "Da dachten diese Mönche und Nonnen: ",
   "sn35.117:3.2": "„Dieser Ehrwürdige Ānanda wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
   "sn35.117:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
-  "sn35.117:3.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ "
+  "sn35.117:3.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
+  "sn35.117:4.1": "Da gingen diese Mönche und Nonnen zu Ānanda und tauschten Willkommensgrüße mit ihm aus. "
 }
