Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn35.117:3.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "sn35.117:3.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
   "sn35.117:4.1": "Da gingen diese Mönche und Nonnen zu Ānanda und tauschten Willkommensgrüße mit ihm aus. ",
-  "sn35.117:4.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: "
+  "sn35.117:4.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: ",
+  "sn35.117:5.15": "„Dass der Ehrwürdige Ānanda das bitte erkläre.“ "
 }
