--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn35.117:4.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: ",
   "sn35.117:5.15": "„Dass der Ehrwürdige Ānanda das bitte erkläre.“ ",
   "sn35.117:6.1": "„Werte Freunde, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme …“ ",
-  "sn35.117:6.2": "„Bitte erkläre es, wenn es dir nichts ausmacht.“ "
+  "sn35.117:6.2": "„Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
+  "sn35.117:7.1": "„Dann hört zu und passt gut auf, ich werde sprechen.“ "
 }
