--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn35.117:6.2": "„Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
   "sn35.117:7.1": "„Dann hört zu und passt gut auf, ich werde sprechen.“ ",
   "sn35.117:7.2": "„Ja, werter Freund“, antworteten sie. ",
-  "sn35.117:7.3": "Ānanda sagte: "
+  "sn35.117:7.3": "Ānanda sagte: ",
+  "sn35.117:8.1": "„Werte Freunde, der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: "
 }
