Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn35.117:7.2": "„Ja, werter Freund“, antworteten sie. ",
   "sn35.117:7.3": "Ānanda sagte: ",
   "sn35.117:8.1": "„Werte Freunde, der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
-  "sn35.117:8.2": "‚Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … "
+  "sn35.117:8.2": "‚Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
+  "sn35.117:8.3": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ "
 }
