--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn35.117:8.4": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
   "sn35.117:8.5": "Der Buddha hat sich auf das Aufhören der sechs Sinnesfelder bezogen, als er sagte: ",
   "sn35.117:8.6": "‚Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
-  "sn35.117:8.7": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ "
+  "sn35.117:8.7": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ ",
+  "sn35.117:8.8": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären. "
 }
