Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn35.117:8.7": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.‘ ",
   "sn35.117:8.8": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären. ",
   "sn35.117:8.11": "Und so verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
-  "sn35.117:8.12": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. "
+  "sn35.117:8.12": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. ",
+  "sn35.117:8.14": "So wie er es erklärt, solltet ihr es behalten.“ "
 }
