--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn35.117:8.8": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären. ",
   "sn35.117:8.11": "Und so verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
   "sn35.117:8.12": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. ",
-  "sn35.117:8.14": "So wie er es erklärt, solltet ihr es behalten.“ "
+  "sn35.117:8.14": "So wie er es erklärt, solltet ihr es behalten.“ ",
+  "sn35.117:9.1": "„Ja, werter Freund“, antworteten jene Mönche und Nonnen. Sie erhoben sich von ihren Sitzen und gingen zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Unterredung mit Ānanda. Dann sagten sie: "
 }
