--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn35.117:9.1": "„Ja, werter Freund“, antworteten jene Mönche und Nonnen. Sie erhoben sich von ihren Sitzen und gingen zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Unterredung mit Ānanda. Dann sagten sie: ",
   "sn35.117:10.14": "„Und Ānanda erklärte uns klar die Bedeutung in dieser Weise, mit diesen Worten und Ausdrücken.“ ",
   "sn35.117:11.1": "„Mönche und Nonnen, Ānanda ist klug, er besitzt große Weisheit. ",
-  "sn35.117:11.2": "Wenn ihr zu mir gekommen wärt und mir diese Frage gestellt hättet, hätte ich auf genau die gleiche Art geantwortet wie Ānanda. "
+  "sn35.117:11.2": "Wenn ihr zu mir gekommen wärt und mir diese Frage gestellt hättet, hätte ich auf genau die gleiche Art geantwortet wie Ānanda. ",
+  "sn35.117:11.3": "Das bedeutet es, und so solltet ihr es behalten.“ "
 }
