--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.118:0.1": "Verbundene Lehrreden 35.118 ",
   "sn35.118:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
-  "sn35.118:0.3": "Sakkas Fragen "
+  "sn35.118:0.3": "Sakkas Fragen ",
+  "sn35.118:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. "
 }
