--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.118:0.1": "Verbundene Lehrreden 35.118 ",
   "sn35.118:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn35.118:0.3": "Sakkas Fragen ",
-  "sn35.118:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. "
+  "sn35.118:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
+  "sn35.118:1.2": "Da ging Sakka der Götterkönig zum Buddha, verbeugte sich, stellte sich zur Seite hin und sagte zu ihm: "
 }
