--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn35.118:0.3": "Sakkas Fragen ",
   "sn35.118:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
   "sn35.118:1.2": "Da ging Sakka der Götterkönig zum Buddha, verbeugte sich, stellte sich zur Seite hin und sagte zu ihm: ",
-  "sn35.118:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen?“ "
+  "sn35.118:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen? "
 }
