--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.118:2.1": "„Götterkönig, es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.118:2.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, ",
   "sn35.118:2.3": "stützt sich sein Bewusstsein darauf und ergreift sie. ",
-  "sn35.118:2.4": "Ein Mönch, der ergreift, erlischt nicht. "
+  "sn35.118:2.4": "Ein Mönch, der ergreift, erlischt nicht. ",
+  "sn35.118:3.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
 }
