Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.118:3.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.118:3.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.118:3.3": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, ",
-  "sn35.118:3.4": "stützt sich ihr Bewusstsein darauf und ergreift sie. "
+  "sn35.118:3.4": "stützt sich ihr Bewusstsein darauf und ergreift sie. ",
+  "sn35.118:3.5": "Eine Nonne, die ergreift, erlischt nicht. "
 }
