Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.118:3.4": "stützt sich ihr Bewusstsein darauf und ergreift sie. ",
   "sn35.118:3.5": "Eine Nonne, die ergreift, erlischt nicht. ",
   "sn35.118:3.6": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. ",
-  "sn35.118:4.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.118:4.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.118:4.2": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, "
 }
