Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.118_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.118:4.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.118:4.2": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, ",
   "sn35.118:4.3": "stützt sich sein Bewusstsein nicht darauf und ergreift sie nicht. ",
-  "sn35.118:4.4": "Ein Mönch, der von Ergreifen frei ist, erlischt. "
+  "sn35.118:4.4": "Ein Mönch, der von Ergreifen frei ist, erlischt. ",
+  "sn35.118:5.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
 }
