--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.119:0.1": "Verbundene Lehrreden 35.119 ",
   "sn35.119:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn35.119:0.3": "Pañcasikhas Fragen ",
-  "sn35.119:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. "
+  "sn35.119:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
+  "sn35.119:1.2": "Da ging der Elf Pañcasikha zum Buddha, verbeugte sich, stellte sich zur Seite hin und sagte zu ihm: "
 }
