--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.119:1.2": "Da ging der Elf Pañcasikha zum Buddha, verbeugte sich, stellte sich zur Seite hin und sagte zu ihm: ",
   "sn35.119:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen? ",
   "sn35.119:1.4": "Was ist der Grund, was ist die Ursache, dass manche Lebewesen in diesem Leben vollkommen erlöschen?“ ",
-  "sn35.119:1.5": "„Pañcasikha, es gibt Bilder, die das Auge erkennt … "
+  "sn35.119:1.5": "„Pañcasikha, es gibt Bilder, die das Auge erkennt … ",
+  "sn35.119:1.6": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
