Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.119:1.5": "„Pañcasikha, es gibt Bilder, die das Auge erkennt … ",
   "sn35.119:1.6": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.119:1.7": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, ",
-  "sn35.119:1.8": "stützt sich sein Bewusstsein darauf und ergreift sie. "
+  "sn35.119:1.8": "stützt sich sein Bewusstsein darauf und ergreift sie. ",
+  "sn35.119:1.9": "Ein Mönch, der ergreift, erlischt nicht. "
 }
