--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.119:1.8": "stützt sich sein Bewusstsein darauf und ergreift sie. ",
   "sn35.119:1.9": "Ein Mönch, der ergreift, erlischt nicht. ",
   "sn35.119:1.10": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. ",
-  "sn35.119:2.1": "Es gibt Bilder, die das Auge erkennt … "
+  "sn35.119:2.1": "Es gibt Bilder, die das Auge erkennt … ",
+  "sn35.119:2.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
