Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.119_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.119:1.9": "Ein Mönch, der ergreift, erlischt nicht. ",
   "sn35.119:1.10": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. ",
   "sn35.119:2.1": "Es gibt Bilder, die das Auge erkennt … ",
-  "sn35.119:2.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.119:2.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.119:2.3": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, stützt sich sein Bewusstsein nicht darauf und ergreift sie nicht. "
 }
