--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.120:0.1": "Verbundene Lehrreden 35.120 ",
-  "sn35.120:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen "
+  "sn35.120:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
+  "sn35.120:0.3": "Sāriputta und der Schüler "
 }
