Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -996,6 +996,7 @@
   "sn-name:1102.sn35.117": "Arten von Sinnesreizen ",
   "sn-name:1103.sn35.118": "Sakkas Fragen ",
   "sn-name:1104.sn35.119": "Pañcasikhas Fragen ",
+  "sn-name:1105.sn35.120": "Sāriputta und der Schüler ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
