--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.120:1.2": "Da ging ein gewisser Mönch zum Ehrwürdigen Sāriputta und tauschte mit ihm Willkommensgrüße aus. ",
   "sn35.120:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu ihm: ",
   "sn35.120:1.4": "„Werter Sāriputta, ein Mönchsschüler von mir hat die Schulung abgebrochen und sich wieder einem geringeren Leben zugewandt.“ ",
-  "sn35.120:2.1": "„So ist es, werter Freund, wenn jemand die Tore der Sinne nicht bewacht, zu viel isst und sich nicht dem Wachsein weiht. "
+  "sn35.120:2.1": "„So ist es, werter Freund, wenn jemand die Tore der Sinne nicht bewacht, zu viel isst und sich nicht dem Wachsein weiht. ",
+  "sn35.120:2.2": "Es ist nicht möglich, dass ein solcher Mönch für den Rest seines Lebens das vollkommene und reine geistliche Leben führen könnte. "
 }
