--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.120:1.4": "„Werter Sāriputta, ein Mönchsschüler von mir hat die Schulung abgebrochen und sich wieder einem geringeren Leben zugewandt.“ ",
   "sn35.120:2.1": "„So ist es, werter Freund, wenn jemand die Tore der Sinne nicht bewacht, zu viel isst und sich nicht dem Wachsein weiht. ",
   "sn35.120:2.2": "Es ist nicht möglich, dass ein solcher Mönch für den Rest seines Lebens das vollkommene und reine geistliche Leben führen kann. ",
-  "sn35.120:2.3": "Aber es ist möglich, dass ein Mönch, der die Tore der Sinne bewacht, beim Essen Maß hält und sich dem Wachsein weiht, für den Rest seines Lebens das vollkommene und reine geistliche Leben führen kann. "
+  "sn35.120:2.3": "Aber es ist möglich, dass ein Mönch, der die Tore der Sinne bewacht, beim Essen Maß hält und sich dem Wachsein weiht, für den Rest seines Lebens das vollkommene und reine geistliche Leben führen kann. ",
+  "sn35.120:3.1": "Und wie bewacht man die Tore der Sinne? "
 }
