Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.120:2.3": "Aber es ist möglich, dass ein Mönch, der die Tore der Sinne bewacht, beim Essen Maß hält und sich dem Wachsein weiht, für den Rest seines Lebens das vollkommene und reine geistliche Leben führen kann. ",
   "sn35.120:3.1": "Und wie bewacht man die Tore der Sinne? ",
   "sn35.120:3.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
-  "sn35.120:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. "
+  "sn35.120:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
+  "sn35.120:3.4": "Wenn er mit dem Ohr einen Ton hört … "
 }
