--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.120:3.1": "Und wie bewacht man die Tore der Sinne? ",
   "sn35.120:3.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "sn35.120:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
-  "sn35.120:3.4": "Wenn er mit dem Ohr einen Ton hört … "
+  "sn35.120:3.4": "Wenn er mit dem Ohr einen Ton hört … ",
+  "sn35.120:3.5": "Wenn er mit der Nase einen Duft riecht … "
 }
