--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.120:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "sn35.120:3.4": "Wenn er mit dem Ohr einen Ton hört … ",
   "sn35.120:3.5": "Wenn er mit der Nase einen Duft riecht … ",
-  "sn35.120:3.6": "Wenn er mit der Zunge einen Geschmack schmeckt … "
+  "sn35.120:3.6": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
+  "sn35.120:3.7": "Wenn er mit dem Körper eine Berührung empfindet … "
 }
