--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.120:3.4": "Wenn er mit dem Ohr einen Ton hört … ",
   "sn35.120:3.5": "Wenn er mit der Nase einen Duft riecht … ",
   "sn35.120:3.6": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
-  "sn35.120:3.7": "Wenn er mit dem Körper eine Berührung empfindet … "
+  "sn35.120:3.7": "Wenn er mit dem Körper eine Berührung empfindet … ",
+  "sn35.120:3.8": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. "
 }
