Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn35.120:4.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und die geistliche Übung zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ ",
   "sn35.120:4.4": "So hält man Maß beim Essen. ",
   "sn35.120:5.1": "Und wie weiht man sich dem Wachsein? ",
-  "sn35.120:5.2": "Da läutert ein Mönch am Tag im Gehen und im Sitzen den Geist von Hemmnissen. "
+  "sn35.120:5.2": "Da läutert ein Mönch am Tag im Gehen und im Sitzen den Geist von Hemmnissen. ",
+  "sn35.120:5.3": "Am Abend läutert er im Gehen und im Sitzen den Geist von Hemmnissen. "
 }
