Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn35.120:5.5": "Im letzten Teil der Nacht steht er auf und läutert im Gehen und im Sitzen den Geist von Hemmnissen. ",
   "sn35.120:5.6": "So weiht man sich dem Wachsein. ",
   "sn35.120:5.7": "Daher sollt ihr euch so schulen: ",
-  "sn35.120:5.8": "‚Wir wollen die Tore unserer Sinne bewachen, beim Essen maßhalten und uns dem Wachsein weihen.‘ "
+  "sn35.120:5.8": "‚Wir wollen die Tore unserer Sinne bewachen, beim Essen maßhalten und uns dem Wachsein weihen.‘ ",
+  "sn35.120:5.9": "So sollt ihr euch schulen.“ "
 }
