Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
@@ -38,7 +38,7 @@
   "sn35.93:3.6": "And the causes and conditions that give rise to mind consciousness are also impermanent, decaying, and perishing. ",
   "sn35.93:3.7": "But since mind consciousness has arisen dependent on conditions that are impermanent, how could it be permanent? ",
   "sn35.93:3.8": "The meeting, coming together, and joining together of these three things is called mind contact. ",
-  "sn35.93:3.9": "Mind contact is also impermanent, perishing, and changing. ",
+  "sn35.93:3.9": "Mind contact is also impermanent, decaying, and perishing. ",
   "sn35.93:3.10": "And the causes and conditions that give rise to mind contact are also impermanent, decaying, and perishing. ",
   "sn35.93:3.11": "But since mind contact has arisen dependent on conditions that are impermanent, how could it be permanent? ",
   "sn35.93:3.12": "Contacted, one feels, intends, and perceives. ",
