Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.93_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn35.93:1.4": "The eye is impermanent, perishing, and changing. ",
   "sn35.93:1.5": "Sights are impermanent, perishing, and changing. ",
   "sn35.93:1.6": "So this duality is tottering and toppling; it’s impermanent, decaying, and perishing. ",
-  "sn35.93:1.7": "Eye consciousness is impermanent, perishing, and changing. ",
+  "sn35.93:1.7": "Eye consciousness is impermanent, decaying, and perishing. ",
   "sn35.93:1.8": "And the causes and conditions that give rise to eye consciousness are also impermanent, decaying, and perishing. ",
   "sn35.93:1.9": "But since eye consciousness has arisen dependent on conditions that are impermanent, how could it be permanent? ",
   "sn35.93:1.10": "The meeting, coming together, and joining together of these three things is called eye contact. ",
