Translations by sujato to translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "an8.12:0.2": "2. The Great Chapter ",
   "an8.12:0.3": "With Sīha ",
   "an8.12:1.1": "At one time the Buddha was staying near Vesālī, at the Great Wood, in the hall with the peaked roof. ",
-  "an8.12:1.2": "Now at that time several very prominent Licchavis were sitting together at the meeting hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
+  "an8.12:1.2": "Now at that time several very prominent Licchavis were sitting together at the town hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
   "an8.12:2.1": "Now at that time General Sīha, a disciple of the Jains, was sitting in that assembly. ",
   "an8.12:2.2": "He thought, ",
   "an8.12:2.3": "“That Blessed One must without a doubt be a perfected one, a fully awakened Buddha. For several very prominent Licchavis are praising the Buddha, his teaching, and the Saṅgha in many ways. ",
