Translations by sujato to translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an8/an8.12_translation-en-sujato.json
@@ -22,7 +22,7 @@
   "an8.12:5.1": "",
   "an8.12:5.2": "",
   "an8.12:5.3": "Then for a second time Sīha’s determination to go and see the Buddha died down. ",
-  "an8.12:6.1": "For a third time, several prominent Licchavis were sitting together at the meeting hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
+  "an8.12:6.1": "For a third time, several prominent Licchavis were sitting together at the town hall, praising the Buddha, his teaching, and the Saṅgha in many ways. ",
   "an8.12:6.2": "And for a third time Sīha thought, ",
   "an8.12:6.3": "“That Blessed One must without a doubt be a perfected one, a fully awakened Buddha. For several very prominent Licchavis are praising the Buddha, his teaching, and the Saṅgha in many ways. ",
   "an8.12:6.4": "What can these Jains do to me, whether I consult with them or not? ",
