Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.87_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.87_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.87_translation-en-sujato.json
@@ -70,7 +70,7 @@
   "sn22.87:7.2": "Late last night, two glorious deities, lighting up the entire Vulture’s Peak, went up to the Buddha, bowed, and stood to one side. ",
   "sn22.87:7.3": "One deity said to him, ",
   "sn22.87:7.4": "“Sir, the mendicant Vakkali is intent on liberation!” ",
-  "sn22.87:7.5": "And another deity said to him, ",
+  "sn22.87:7.5": "The other deity said to him, ",
   "sn22.87:7.6": "“He’ll definitely be well-freed!” ",
   "sn22.87:7.7": "And the Buddha said, ",
   "sn22.87:7.8": "“Do not fear, Vakkali, ",
