Translations by sujato to translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
@@ -202,7 +202,7 @@
   "thag21.1:49.3": "for the monks and for the nuns ",
   "thag21.1:49.4": "who see that they’ve reached certainty. ",
   "thag21.1:50.1": "The seer, the Buddha, ",
-  "thag21.1:50.2": "the Kinsman of the Sun, ",
+  "thag21.1:50.2": "the kinsman of the Sun, ",
   "thag21.1:50.3": "has well taught the four noble truths ",
   "thag21.1:50.4": "out of compassion for living creatures. ",
   "thag21.1:51.1": "Suffering, suffering’s origin, ",
