Translations by sujato to translation/en/sujato/sutta/dn/dn32_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn32_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn32_translation-en-sujato.json
@@ -226,7 +226,7 @@
   "dn32:7.75": "Eighty, and ten, and one—",
   "dn32:7.76": "all of them named Indra. ",
   "dn32:7.77": "After seeing the Awakened One, ",
-  "dn32:7.78": "the Buddha, Kinsman of the Sun, ",
+  "dn32:7.78": "the Buddha, kinsman of the Sun, ",
   "dn32:7.79": "they revere him from afar, ",
   "dn32:7.80": "the one great of heart and rid of naivety. ",
   "dn32:7.81": "Homage to you, O thoroughbred! ",
