Translations by sujato to translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json
@@ -55,7 +55,7 @@
   "dn3:1.10.0": "2.1. The First Use of the Word “Riffraff” ",
   "dn3:1.10.1": "“No, Master Gotama. ",
   "dn3:1.10.2": "For it is proper for one brahmin to converse with another while both are walking, standing, sitting, or lying down. ",
-  "dn3:1.10.3": "But as to these shavelings, fake ascetics, riffraff, black spawn from the feet of our Kinsman, I converse with them as I do with Master Gotama.” ",
+  "dn3:1.10.3": "But as to these shavelings, fake ascetics, riffraff, black spawn from the feet of our kinsman, I converse with them as I do with Master Gotama.” ",
   "dn3:1.11.1": "“But Ambaṭṭha, you must have come here for some purpose. You should focus on that. ",
   "dn3:1.11.2": "Though this Ambaṭṭha is unqualified, he thinks he’s qualified. What is that but lack of qualifications?” ",
   "dn3:1.12.1": "When he said this, Ambaṭṭha became angry and upset with the Buddha because of being described as unqualified. He even attacked and badmouthed the Buddha himself, saying, ",
