Translations by sujato to translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn3_translation-en-sujato.json
@@ -310,7 +310,7 @@
   "dn3:2.5.1": "“So you with your tradition are not only inferior to the supreme knowledge and conduct, ",
   "dn3:2.5.2": "you are even inferior to the four drains that affect the supreme knowledge and conduct. ",
   "dn3:2.5.3": "But you have been told this by your teacher, the brahmin Pokkharasāti: ",
-  "dn3:2.5.4": "‘Who are these shavelings, fake ascetics, riffraff, black spawn from the feet of our Kinsman compared with conversation with the brahmins of the three knowledges?” Yet he himself has not even fulfilled one of the drains! ",
+  "dn3:2.5.4": "‘Who are these shavelings, fake ascetics, riffraff, black spawn from the feet of our kinsman compared with conversation with the brahmins of the three knowledges?” Yet he himself has not even fulfilled one of the drains! ",
   "dn3:2.5.5": "See, Ambaṭṭha, how your teacher Pokkharasāti has wronged you. ",
   "dn3:2.6.0": "6. Being Like the Sages of the Past ",
   "dn3:2.6.1": "But Pokkharasāti lives off an endowment provided by King Pasenadi of Kosala. ",
