Translations by sujato to translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thag/thag21.1_translation-en-sujato.json
@@ -16,7 +16,7 @@
   "thag21.1:3.3": "they won’t scare me, ",
   "thag21.1:3.4": "for I stand firm in the teaching. ",
   "thag21.1:4.1": "I heard this with my own ears ",
-  "thag21.1:4.2": "from the Buddha, Kinsman of the Sun, ",
+  "thag21.1:4.2": "from the Buddha, kinsman of the Sun, ",
   "thag21.1:4.3": "about the path going to extinguishment; ",
   "thag21.1:4.4": "that’s what delights my mind. ",
   "thag21.1:5.1": "Wicked One, if you come near me ",
