Translations by sujato to translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
@@ -329,7 +329,7 @@
   "mn22:41.12": "What do you think, mendicants? ",
   "mn22:41.13": "Suppose a person was to carry off the grass, sticks, branches, and leaves in this Jeta’s Grove, or burn them, or do what they want with them. ",
   "mn22:41.14": "Would you think, ",
-  "mn22:41.15": "‘This person is carrying us off, burning us, or doing what they want with us?’” ",
+  "mn22:41.15": "‘This person is carrying us off, burning us, or doing what they want with us’?” ",
   "mn22:41.16": "“No, sir. ",
   "mn22:41.17": "Why is that? ",
   "mn22:41.18": "Because that’s neither self nor belonging to self.” ",
