Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
@@ -74,7 +74,7 @@
   "sn22.55:11.5": "Or consciousness would remain involved with feeling … ",
   "sn22.55:11.6": "Or consciousness would remain involved with perception … ",
   "sn22.55:11.7": "Or consciousness would remain involved with choices, supported by choices, grounded on choices. And with a sprinkle of relishing, it would grow, increase, and mature. ",
-  "sn22.55:12.1": "Mendicants, suppose you say: ",
+  "sn22.55:12.1": "Suppose, mendicant, you were to say: ",
   "sn22.55:12.2": "‘Apart from form, feeling, perception, and choices, I will describe the coming and going of consciousness, its passing away and reappearing, its growth, increase, and maturity.’ That is not possible. ",
   "sn22.55:13.1": "If a mendicant has given up greed for the form element, the support is cut off, and there is no foundation for consciousness. ",
   "sn22.55:13.2": "If a mendicant has given up greed for the feeling element … ",
