Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
@@ -83,6 +83,6 @@
   "sn22.55:13.5": "consciousness element, the support is cut off, and there is no foundation for consciousness. ",
   "sn22.55:13.6": "Since that consciousness does not become established and does not grow, with no power to regenerate, it is freed. ",
   "sn22.55:13.7": "Being free, it’s stable. Being stable, it’s content. Being content, they’re not anxious. Not being anxious, they personally become extinguished. ",
-  "sn22.55:13.8": "They understand: ‘Rebirth is ended … there is no return to any state of existence.’” ",
+  "sn22.55:13.8": "They understand: ‘Rebirth is ended … there is no return to any state of existence.’ ",
   "sn22.55:13.9": "The ending of the defilements is for one who knows and sees this.” "
 }
