Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -1,7 +1,7 @@
 {
   "pli-tv-kd16:0.1": "Theravāda Collection on Monastic Law ",
   "pli-tv-kd16:0.2": "The Short Division ",
-  "pli-tv-kd16:0.3": "The chapter on dwellings ",
+  "pli-tv-kd16:0.3": "The chapter on resting places  ",
   "pli-tv-kd16:0.4": "1.1 The allowance for dwellings ",
   "pli-tv-kd16:1.1.1": "At one time the Buddha was staying at Rājagaha in the Bamboo Grove, the squirrel sanctuary. ",
   "pli-tv-kd16:1.1.2": "At this time the Buddha had not yet allowed dwellings. ",
