Translations by sujato to translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn149_translation-en-sujato.json
@@ -67,7 +67,7 @@
   "mn149:12-18.2": "nose … ",
   "mn149:12-18.3": "tongue … ",
   "mn149:12-18.4": "body … ",
-  "mn149:12-18.5": "mind, thoughts, mind consciousness, mind contact, and what is felt as pleasant, painful, or neutral that arises conditioned by mind contact, you are not aroused by desire for these things. … ",
+  "mn149:12-18.5": "mind, thoughts, mind consciousness, mind contact, and what is felt as pleasant, painful, or neutral that arises conditioned by mind contact, you are not aroused by these things. … ",
   "mn149:19.1": "",
   "mn149:19.2": "",
   "mn149:19.3": "",
