Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -1212,5 +1212,5 @@
   "pli-tv-kd16:21.3.198": "The Leader intent on what’s beneficial: ",
   "pli-tv-kd16:21.3.199": "It’s for the sake of shelter and happiness, ",
   "pli-tv-kd16:21.3.200": "To attain absorption and to see clearly. ",
-  "pli-tv-kd16:21.3.201": "The chapter on dwellings is finished."
+  "pli-tv-kd16:21.3.201": "The chapter on resting places is finished."
 }
